--- a/shop/index.html
+++ b/shop/index.html
@@ -11,58 +11,52 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <div class="wrap header_wrap">
             <div class="header_leftBox">
-                <a href=""><img src="img/logo.svg" alt="logo"></a>
-                <a href=""><img src="img/search.svg" alt="search"></a>
+                <a href="#"><img src="img/logo.svg" alt="logo"></a>
+                <button class="header_searchButton" type="button"><img src="img/search.svg" alt="search"></button>
             </div>
-            <div class="header_rightBox">
-                <a href=""><img src="img/menu.svg" alt="menu"></a>
-                <a href=""><img src="img/profile.svg" alt="profile"></a>
-                <a href=""><img src="img/cart.svg" alt="cart"></a>
-            </div>
+            <nav class="header_navBox">
+                <button class="header_menuButton" type="button"><img src="img/menu.svg" alt="menu"></button>
+                <a href="#"><img src="img/profile.svg" alt="profile"></a>
+                <a href="#"><img src="img/cart.svg" alt="cart"></a>
+            </nav>
         </div>
-    </div>
+    </header>
 
-    <div class="promo">
-        <div class="promo_wrap">
-            <img src="img/back_promo.png" alt="">
-            <div class="slogan">
-                <p class="slogan_h1">THE BRAND</p>
-                <p class="slogan_h2">OF LUXERIOUS <span>FASHION</span></p>
-            </div>
+    <section class="promo">
+        <div class="wrap promo_wrap">
+            <h1 class="promo_h1"><span>THE BRAND</span><br>OF LUXERIOUS <span>FASHION</span></h1>
         </div>
-    </div>
+    </section>
 
-    <div class="content">
+    <main class="content">
         <div class="wrap">
-            <div class="productCategories">
+            <section class="productCategories">
+                <h2 class="hidden">Product Categories</h2>
                 <div class="productForWoman">
-                    <p class="productCategoris_text">30% OFF</p>
-                    <p class="productCategoris_heading">FOR WOMEN</p>
+                    <p class="productCategoris_text">30% OFF<br><span>FOR WOMEN</span></p>
                 </div>
                 <div class="productForMan">
-                    <p class="productCategoris_text">HOT DEAL</p>
-                    <p class="productCategoris_heading">FOR MEN</p>
+                    <p class="productCategoris_text">HOT DEAL<br><span>FOR MEN</span></p>
                 </div>
                 <div class="productForKid">
-                    <p class="productCategoris_text">NEW ARRIVALS</p>
-                    <p class="productCategoris_heading">FOR KIDS</p>
+                    <p class="productCategoris_text">NEW ARRIVALS<br><span>FOR KIDS</span></p>
                 </div>
                 <div class="productAccesories">
-                    <p class="productCategoris_text">LUXIROUS & TRENDY</p>
-                    <p class="productCategoris_heading">ACCESORIES</p>
+                    <p class="productCategoris_text">LUXIROUS & TRENDY<br><span>ACCESORIES</span></p>
                 </div>
-            </div>
-            <div class="feturedItems">
-                <p class="feturedItems_heading">Fetured Items</p>
+            </section>
+            <section class="feturedItems">
+                <h2 class="hidden">Fetured Items</h2>
+                <h2 class="feturedItems_heading">Fetured Items</h2>
                 <p class="fearutedItems_text">Shop for items based on what we featured in this week</p>
                 <div class="productCardsBox">
                     <div class="productCard">
                         <img src="img/products/img1.png" alt="img1">
                         <div class="productCard_content">
-                            <p class="productCard_heading">ELLERY X M'O CAPSULE</p>
+                            <h3 class="productCard_heading">ELLERY X M'O CAPSULE</h3>
                             <p class="productCard_text">Known for her sculptural takes on traditional tailoring,
                                 Australian
                                 arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -72,7 +66,7 @@
                     <div class="productCard">
                         <img src="img/products/img2.png" alt="img2">
                         <div class="productCard_content">
-                            <p class="productCard_heading">ELLERY X M'O CAPSULE</p>
+                            <h3 class="productCard_heading">ELLERY X M'O CAPSULE</h3>
                             <p class="productCard_text">Known for her sculptural takes on traditional tailoring,
                                 Australian
                                 arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -82,7 +76,7 @@
                     <div class="productCard">
                         <img src="img/products/img3.png" alt="img3">
                         <div class="productCard_content">
-                            <p class="productCard_heading">ELLERY X M'O CAPSULE</p>
+                            <h3 class="productCard_heading">ELLERY X M'O CAPSULE</h3>
                             <p class="productCard_text">Known for her sculptural takes on traditional tailoring,
                                 Australian
                                 arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -120,35 +114,36 @@
                         </div>
                     </div>
                 </div>
-                <a href="" class="browseProductButton">Browse All Product</a>
-            </div>
+                <a href="#" class="browseProductButton">Browse All Product</a>
+            </section>
         </div>
-    </div>
+    </main>
 
-    <div class="feature">
+    <section class="feature">
+        <h2 class="hidden">Our Features</h2>
         <div class="wrap feature_wrap">
             <div class="feature_item">
                 <img src="img/feature_delivery.svg" alt="feature_delivery">
-                <p class="feature_item_heading">Free Delivery</p>
+                <h3 class="feature_item_heading">Free Delivery</h3>
                 <p class="feature_item_text">Worldwide delivery on all. Authorit tively morph next-generation innov tion
                     with extensive models.</p>
             </div>
             <div class="feature_item">
                 <img src="img/feature_sales.svg" alt="feature_sales">
-                <p class="feature_item_heading">Sales & discounts</p>
+                <h3 class="feature_item_heading">Sales & discounts</h3>
                 <p class="feature_item_text">Worldwide delivery on all. Authorit tively morph next-generation innov tion
                     with extensive models.</p>
             </div>
             <div class="feature_item">
                 <img src="img/feature_quality.svg" alt="feature_quality">
-                <p class="feature_item_heading">Quality assurance</p>
+                <h3 class="feature_item_heading">Quality assurance</h3>
                 <p class="feature_item_text">Worldwide delivery on all. Authorit tively morph next-generation innov tion
                     with extensive models.</p>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="subscribe">
+    <section class="subscribe">
         <div class="wrap subscribe_wrap">
             <div class="subscribe_quoteBox">
                 <img src="img/subscribe_foto.png" alt="subscribe_foto">
@@ -156,29 +151,27 @@
                         pulvinar purus condimentum “</i></p>
             </div>
             <div class="subscribe_buttonBox">
-                <p class="subscribe_buttonBox_heading">SUBSCRIBE
-                </p>
+                <h2 class="subscribe_heading">SUBSCRIBE</h2>
                 <p class="subscribe_buttonBox_text">FOR OUR NEWLETTER AND PROMOTION</p>
-                <form class="subscribe_buttonBox_wrap">
-                    <input type="email" id="" placeholder="Enter Your Email" class="subscribe_button_inputArea"><button
+                <form action="" class="subscribe_form">
+                    <input type="email" placeholder="Enter Your Email" required class="subscribe_form_input"><button
                         type="submit" class="subscribe_button">Subscribe</button>
                 </form>
             </div>
-
         </div>
-    </div>
+    </section>
 
-    <div class="footer">
+    <footer class="footer">
         <div class="wrap footer_wrap">
-            <p class="footer_copy">&copy; 2021 Brand All Rights Reserved.</dipv>
-            <div class="footer_socialLink">
-                <a href=""><img src="img/socialLinkFace.svg" alt="socialLinkFace"></a>
-                <a href=""><img src="img/socialLinkInst.svg" alt="socialLinkInst"></a>
-                <a href=""><img src="img/socialLinkPint.svg" alt="socialLinkPint"></a>
-                <a href=""><img src="img/socialLinkTwit.svg" alt="socialLinkTwit"></a>
-            </div>
+            <p class="footer_copy">&copy; 2021 Brand All Rights Reserved.</p>
+            <article class="footer_socialLink">
+                <a href="#"><img src="img/socialLinkFace.svg" alt="socialLinkFace"></a>
+                <a href="#"><img src="img/socialLinkInst.svg" alt="socialLinkInst"></a>
+                <a href="#"><img src="img/socialLinkPint.svg" alt="socialLinkPint"></a>
+                <a href="#"><img src="img/socialLinkTwit.svg" alt="socialLinkTwit"></a>
+            </article>
         </div>
-    </div>
+    </footer>
 
 </body>
 
