--- a/shop/index.html
+++ b/shop/index.html
@@ -14,13 +14,13 @@
     <header class="header">
         <div class="wrap header_wrap">
             <div class="header_leftBox">
-                <a href="#"><img src="img/logo.svg" alt="logo"></a>
+                <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
                 <button class="header_searchButton" type="button"><img src="img/search.svg" alt="search"></button>
             </div>
             <nav class="header_navBox">
                 <button class="header_menuButton" type="button"><img src="img/menu.svg" alt="menu"></button>
-                <a href="#"><img src="img/profile.svg" alt="profile"></a>
-                <a href="#"><img src="img/cart.svg" alt="cart"></a>
+                <a href="profile.html"><img src="img/profile.svg" alt="profile"></a>
+                <a href="cart.html"><img src="img/cart.svg" alt="cart"></a>
             </nav>
         </div>
     </header>
@@ -54,9 +54,10 @@
                 <p class="fearutedItems_text">Shop for items based on what we featured in this week</p>
                 <div class="productCardsBox">
                     <div class="productCard">
-                        <img src="img/products/img1.png" alt="img1">
+                        <img src="img/products/img1.jpg" alt="img1">
                         <div class="productCard_content">
-                            <h3 class="productCard_heading">ELLERY X M'O CAPSULE</h3>
+                            <h3 class="productCard_heading"><a href="product.html" class="productLink">ELLERY X M'O
+                                    CAPSULE</a></h3>
                             <p class="productCard_text">Known for her sculptural takes on traditional tailoring,
                                 Australian
                                 arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -64,9 +65,10 @@
                         </div>
                     </div>
                     <div class="productCard">
-                        <img src="img/products/img2.png" alt="img2">
+                        <img src="img/products/img2.jpg" alt="img2">
                         <div class="productCard_content">
-                            <h3 class="productCard_heading">ELLERY X M'O CAPSULE</h3>
+                            <h3 class="productCard_heading"><a href="product.html" class="productLink">ELLERY X M'O
+                                    CAPSULE</a></h3>
                             <p class="productCard_text">Known for her sculptural takes on traditional tailoring,
                                 Australian
                                 arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -74,9 +76,10 @@
                         </div>
                     </div>
                     <div class="productCard">
-                        <img src="img/products/img3.png" alt="img3">
+                        <img src="img/products/img3.jpg" alt="img3">
                         <div class="productCard_content">
-                            <h3 class="productCard_heading">ELLERY X M'O CAPSULE</h3>
+                            <h3 class="productCard_heading"><a href="product.html" class="productLink">ELLERY X M'O
+                                    CAPSULE</a></h3>
                             <p class="productCard_text">Known for her sculptural takes on traditional tailoring,
                                 Australian
                                 arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -84,9 +87,10 @@
                         </div>
                     </div>
                     <div class="productCard">
-                        <img src="img/products/img4.png" alt="img4">
+                        <img src="img/products/img4.jpg" alt="img4">
                         <div class="productCard_content">
-                            <p class="productCard_heading">ELLERY X M'O CAPSULE</p>
+                            <h3 class="productCard_heading"><a href="product.html" class="productLink">ELLERY X M'O
+                                    CAPSULE</a></h3>
                             <p class="productCard_text">Known for her sculptural takes on traditional tailoring,
                                 Australian
                                 arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -94,9 +98,10 @@
                         </div>
                     </div>
                     <div class="productCard">
-                        <img src="img/products/img5.png" alt="img5">
+                        <img src="img/products/img5.jpg" alt="img5">
                         <div class="productCard_content">
-                            <p class="productCard_heading">ELLERY X M'O CAPSULE</p>
+                            <h3 class="productCard_heading"><a href="product.html" class="productLink">ELLERY X M'O
+                                    CAPSULE</a></h3>
                             <p class="productCard_text">Known for her sculptural takes on traditional tailoring,
                                 Australian
                                 arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -104,9 +109,10 @@
                         </div>
                     </div>
                     <div class="productCard">
-                        <img src="img/products/img6.png" alt="img6">
+                        <img src="img/products/img6.jpg" alt="img6">
                         <div class="productCard_content">
-                            <p class="productCard_heading">ELLERY X M'O CAPSULE</p>
+                            <h3 class="productCard_heading"><a href="product.html" class="productLink">ELLERY X M'O
+                                    CAPSULE</a></h3>
                             <p class="productCard_text">Known for her sculptural takes on traditional tailoring,
                                 Australian
                                 arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -114,7 +120,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#" class="browseProductButton">Browse All Product</a>
+                <a href="catalog.html" class="browseProductButton">Browse All Product</a>
             </section>
         </div>
     </main>
@@ -124,20 +130,23 @@
         <div class="wrap feature_wrap">
             <div class="feature_item">
                 <img src="img/feature_delivery.svg" alt="feature_delivery">
-                <h3 class="feature_item_heading">Free Delivery</h3>
-                <p class="feature_item_text">Worldwide delivery on all. Authorit tively morph next-generation innov tion
+                <h3 class="feature_item__heading">Free Delivery</h3>
+                <p class="feature_item__text">Worldwide delivery on all. Authorit tively morph next-generation innov
+                    tion
                     with extensive models.</p>
             </div>
             <div class="feature_item">
                 <img src="img/feature_sales.svg" alt="feature_sales">
-                <h3 class="feature_item_heading">Sales & discounts</h3>
-                <p class="feature_item_text">Worldwide delivery on all. Authorit tively morph next-generation innov tion
+                <h3 class="feature_item__heading">Sales & discounts</h3>
+                <p class="feature_item__text">Worldwide delivery on all. Authorit tively morph next-generation innov
+                    tion
                     with extensive models.</p>
             </div>
             <div class="feature_item">
                 <img src="img/feature_quality.svg" alt="feature_quality">
-                <h3 class="feature_item_heading">Quality assurance</h3>
-                <p class="feature_item_text">Worldwide delivery on all. Authorit tively morph next-generation innov tion
+                <h3 class="feature_item__heading">Quality assurance</h3>
+                <p class="feature_item__text">Worldwide delivery on all. Authorit tively morph next-generation innov
+                    tion
                     with extensive models.</p>
             </div>
         </div>
@@ -147,14 +156,14 @@
         <div class="wrap subscribe_wrap">
             <div class="subscribe_quoteBox">
                 <img src="img/subscribe_foto.png" alt="subscribe_foto">
-                <p class="subscribe_quoteBox_text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <i>a
+                <p class="subscribe_quoteBox__text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <i>a
                         pulvinar purus condimentum “</i></p>
             </div>
             <div class="subscribe_buttonBox">
                 <h2 class="subscribe_heading">SUBSCRIBE</h2>
-                <p class="subscribe_buttonBox_text">FOR OUR NEWLETTER AND PROMOTION</p>
+                <p class="subscribe_buttonBox__text">FOR OUR NEWLETTER AND PROMOTION</p>
                 <form action="" class="subscribe_form">
-                    <input type="email" placeholder="Enter Your Email" required class="subscribe_form_input"><button
+                    <input type="email" placeholder="Enter Your Email" required class="subscribe_form__input"><button
                         type="submit" class="subscribe_button">Subscribe</button>
                 </form>
             </div>
