--- a/shop/index.html
+++ b/shop/index.html
@@ -94,7 +94,7 @@
                         <p class="product-list__text_place_in-item product-list__text_price">$52.00</p>
                     </li>
                     <li class="product-list__item">
-                        <video controls class="product-list_video" poster="img/products/img2.jpg" loop>
+                        <video controls class="product-list__video" poster="img/products/img2.jpg" loop>
                             <source src="img/ryan.mp4">
                             <p>Ваш браузер не поддерживает встроенные видео. Попробуйте скачать его по <a
                                     href="img/rayn.mp4">этой ссылке</a>.
