upd menu in header

--- a/shop/index.html
+++ b/shop/index.html
@@ -160,6 +160,9 @@
                         <p class="product-list__text product-list__text_place_in-item">Known for her sculptural takes on
                             traditional tailoring,
                             Australian
+                            arbiter of cool Kym Ellery teams up with Moda Operandi.Known for her sculptural takes on
+                            traditional tailoring,
+                            Australian
                             arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                         <p class="product-list__price">$52.00</p>
                     </li>
