--- a/shop/index.html
+++ b/shop/index.html
@@ -48,7 +48,7 @@
                 </li>
             </ul>
         </nav>
-        <nav class="menu menu_closed">
+        <nav class="menu">
             <!--  menu_closed -->
             <h2 class="menu__heading">MENU</h2>
             <ul class="menu__list">
