add adaptation in all page

--- a/shop/cart.html
+++ b/shop/cart.html
@@ -51,13 +51,13 @@
     </header>
 
     <nav class="crumbs">
-        <div class="wrap crumbs__wrap">
+        <div class="wrap crumbs__wrap crumbs__wrap_type_solo">
             <h2 class="crumbs__heading">SHOPPING CART</h2>
         </div>
     </nav>
 
     <main class="content">
-        <div class="wrap wrap_type_colomn wrap_page_cart">
+        <div class="wrap wrap_page_cart">
             <section class="cart">
                 <h2 class="hidden">Cart</h2>
                 <ul class="cart__list">
@@ -109,9 +109,9 @@
                     </li>
                 </ul>
                 <div class="cart__button-wrap">
-                    <button type="button" class="cart__button cart__button_type_cart-control">CLEAR SHOPPING
-                        CART</button>
-                    <button type="button" class="cart__button cart__button_type_cart-control">CONTINUE SHOPPING</button>
+                    <button type="button" class="cart__button cart__button_type_cart-control">Clear shopping
+                        cart</button>
+                    <button type="button" class="cart__button cart__button_type_cart-control">Continue shopping</button>
                 </div>
             </section>
             <section class="checkout">
