--- a/shop/registration.html
+++ b/shop/registration.html
@@ -109,14 +109,15 @@
     </header>
 
     <nav class="crumbs">
-        <div class="wrap crumbs__wrap">
+        <div class="wrap crumbs__wrap crumbs__wrap_type_solo">
             <h2 class="crumbs__heading">REGISTRATION</h2>
         </div>
     </nav>
 
     <main class="content">
-        <div class="wrap wrap_type_colomn wrap_page_registration">
-            <section class="checkout">
+        <div class="wrap wrap_page_registration">
+            <section class="registration">
+                <h3 class="hidden">Registration form</h3>
                 <form action="#" class="input-form">
                     <h4 class="input-form__heading">Your Name</h4>
                     <div class="input-form__wrap input-form__wrap_type_input">
@@ -156,8 +157,7 @@
             </section>
 
             <article class="aside-info">
-                <h3 class="hidden">Loyalty perks</h3>
-                <p class="aside-info__text">LOYALTY HAS ITS PERKS</p>
+                <h3 class="aside-info__heading">LOYALTY HAS ITS PERKS</h3>
                 <p class="aside-info__text">Get in on the loyalty program where you can earn points and unlock serious
                     perks. Starting with these as soon as you join:</p>
                 <ul class="aside-info__list">
